# colored-hexdump

./: Cargo.toml  README.md
src/: binary_tempalte.rs  binary_template.rs  braille.rs  lib.rs  main.rs
