[package]
name = "colored-hexdump"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Create beautifuly colored hexdumps"
repository = "https://github.com/0xfalafel/colored-hexdump"

[lib]
name = "colored_hexdump"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
